# food_app

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
front/: .eslintrc.json  nx.json  package-lock.json  package.json  project.json  vite.config.ts
front/src/: main.tsx  styles.css  utils.tsx
front/src/app/: app.tsx
front/src/components/: diet.tsx  error.tsx  generate.tsx  home.tsx  login.tsx  navbar.tsx  recipe.tsx  register.tsx  search.tsx  updategoals.tsx
front/src/contexts/: UserContext.tsx
front/src/styles/: generate.module.css  home.module.css  login.module.css  navbar.module.css  recipe.module.css  search.module.css  updategoals.module.css
front/src/types/: User.ts  User.tsx
users/: containers.py  endpoints.py  main.py  models.py  repositories.py  schemas.py  services.py  utils.py
